# audrey.feldroy.com

./: .gitignore  AGENT.md  AGENTS.md  README.md  justfile  listo.py  main.py  old.main.py  pyproject.toml  requirements.txt  test_browser.py  test_main.py
.well-known/: atproto-did
articles/: 2015-02-02-Welcome.md  2015-02-03-Ceramic-Bird.md  2015-02-06-The-Boatyard.md  2015-02-09-Golden-Gate-Bridge-I.md  2015-02-11-Golden-Gate-Bridge-Ii.md  2015-02-12-Palace-Dome-From-The-Presidio.md  2015-04-04-Cover-Design-For-Into-The-Brambles.md  2015-04-06-Moon-Over-The-Waves.md  2015-04-07-Waves-From-My-Dreams.md  2015-04-08-Ice-Cream-Cake-With-Starfish.md  2015-04-09-Typography-For-Into-The-Brambles-Paperback.md  2015-04-10-Spring-Garden.md  2015-04-10-The-Greatest-Cheese-In-The-World.md  2015-04-12-Simple-Garden.md  2015-04-13-Endless-Food.md  2015-04-14-Flying-Dog-Sketches.md  2015-04-16-The-Garden-Of-Feelings.md  2015-04-17-Two-Scoops-Of-Ice-Cream.md  2015-04-18-Giant-Flying-Dog.md  2015-04-19-Exploding-Flower.md  2015-04-29-Metallic-Flower-Doodles.md  2015-04-30-Strawberries.md  2015-05-03-Cover-Art-For-Two-Scoops-Of-Django-18.md  2015-05-04-Early-Watercolor-Of-The-Two-Scoops-18-Cover.md  2015-05-05-Hand-Lettering-For-Two-Scoops-18.md  2015-05-06-Cloud-Garden.md  2015-05-06-Willow-Tree.md  2015-05-07-Flowers-And-A-Blue-Potato.md  2015-05-08-River-And-Mountains.md  2015-05-09-Land-Of-Five-Suns.md  2015-05-10-House-Over-Waterfall.md  2015-05-11-Circle-Flowers.md  2015-05-12-Gleaming-Mountain.md  2015-05-26-Our-Trip-To-Djangogirls-Ensenada-Mexico.md  2015-11-09-Solving-Unicodedecodeerrors-Due-To-Opening-Binary-Files.md  (+113 more)
(+180 files in other folders)
