[project]
name = "audrey-feldroy-com"
version = "0.1.0"
description = "My blog, powered by Air, the awesome new Python web framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "air",
    "fastapi[standard]>=0.116.1",
    "hypercorn>=0.17.3",
    "mistletoe",
]


[project.optional-dependencies]
dev = [
    "ruff",
    "fastapi[standard]>=0.116.1",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
