[project]
name = "audrey-feldroy-com"
version = "0.1.0"
description = "My blog, powered by Air, the awesome new Python web framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "air>=0.45.0",
    "hypercorn>=0.17.3",
    "listo>=0.8.0",
    "mistletoe",
    "pygments>=2.19.2",
]


[dependency-groups]
dev = [
    "ruff",
    "fastapi[standard]>=0.116.1",
    "pytest>=8.4.1",
]
